version/0.12/_sources/api/solver/_autosummary/settings/adhesion_angle.rst.txt
:orphan:

.. _adhesion_angle:

adhesion_angle
==============

.. currentmodule:: ansys.fluent.core.solver.settings_231.adhesion_angle

.. autoclass:: adhesion_angle
    :show-inheritance:
    :undoc-members:
.. rubric:: Named object type

:ref:`child_object_type_child <child_object_type_child_1>`


.. rubric:: Included in:

============================================   =======================================

Parent                                                                         Summary

============================================   =======================================
:ref:`porous_jump_child <porous_jump_child>`       'child_object_type' of porous_jump.

:ref:`phase_child <phase_child_15>`                      'child_object_type' of phase.

:ref:`wall_child <wall_child>`                            'child_object_type' of wall.

:ref:`phase_child <phase_child_24>`                      'child_object_type' of phase.

============================================   =======================================

